Fixed whitespace below iframe

--- a/styles/guide.css
+++ b/styles/guide.css
@@ -1,4 +1,3 @@
-html {
-  height: 800px;
-  overflow: hidden;
+.embed-responsive {
+  height: 100%;
 }
