--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,19 +2,16 @@ body {
   background-color: ##efefef;
 }
 
+html, body {
+  height: 100%;
+}
+
 nav {
   background-color: #efefef;
 }
 
 ul {
   margin: auto;
-}
-
-footer {
-  width: 100%;
-  text-align: center;
-  background-color: #dfe3e6;
-  padding: 7px;
 }
 
 h1 {
@@ -26,18 +23,27 @@ h6 {
 }
 
 .centerImage {
-  display: block;
   margin-left: auto;
   margin-right: auto;
+  display: block;
+}
+
+p {
+  text-align: center;
+  margin-left: 9em;
+  margin-right: 9em;
+}
+
+#bannertextdiv {
+  position: absolute;
+  top: 28%;
+  width: 100%;
+  text-align: center;
 }
 
 #bannertext1 {
   color: white;
   font-size: 3.5em;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 
 .externalLink {
